# CMDforge

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
docs/: architecture.md  development.md
src/cmdforge/: __init__.py  __main__.py  cli.py  config.py  console.py  doctor.py  exceptions.py  metadata.py  paths.py  scaffold.py
src/cmdforge/commands/: __init__.py  about.py  cache.py  config.py  doctor.py  init.py  version.py
tests/: test_cli.py  test_config.py  test_doctor.py  test_scaffold.py
