[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "cmdforge"
version = "0.1.0"
description = "A polished Python CLI toolkit and reference implementation for ergonomic command-line apps."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Suresh Reddy" },
]
keywords = [
  "cli",
  "developer-tools",
  "rich",
  "template",
  "typer",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Terminals",
  "Typing :: Typed",
]
dependencies = [
  "platformdirs>=4.2.0,<5.0.0",
  "rich>=13.7.0,<15.0.0",
  "typer>=0.12.3,<1.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
]

[project.urls]
Homepage = "https://github.com/sureshreddy197/CMDforge"
Documentation = "https://github.com/sureshreddy197/CMDforge/tree/main/docs"
Issues = "https://github.com/sureshreddy197/CMDforge/issues"
Repository = "https://github.com/sureshreddy197/CMDforge"

[project.scripts]
cmdforge = "cmdforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cmdforge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "SIM",
  "C4",
  "RUF",
]
ignore = [
  "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
show_error_codes = true
pretty = true
mypy_path = "src"
files = ["src/cmdforge"]

[tool.coverage.run]
branch = true
source = ["cmdforge"]

[tool.coverage.report]
show_missing = true
skip_covered = true
